<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_micrortps</name>
  <version>0.0.1</version>
  <description>micro rtps implementation of rmw interface in C</description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  
  <depend>microcdr</depend>
  <depend>micrortps_client</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rosidl_generator_c</depend>
  <depend>rosidl_typesupport_micrortps_c</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
