<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_microxrcedds</name>
  <version>0.0.1</version>
  <description>Implement the microROS interface using eProsima Micro XRCE-DDS.</description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>microxrcedds_cmake_module</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  
  <build_depend>microxrcedds_cmake_module</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_microxrcedds_c</build_depend>
  <build_depend>rosidl_typesupport_microxrcedds_cpp</build_depend>

  <build_export_depend>microxrcedds_cmake_module</build_export_depend>
  <build_export_depend>rcutils</build_export_depend>
  <build_export_depend>rmw</build_export_depend>
  <build_export_depend>rosidl_generator_c</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_microxrcedds_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_microxrcedds_cpp</build_export_depend>

  <depend>ament_cmake_target_dependencies</depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>microxrcedds_agent_cmake_module</test_depend>



  <member_of_group>rmw_implementation_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
